# FramesAndNodes

./: README.md  package.xml  pixi.toml  pyproject.toml
Documentation/Theory/Geogebra_Math_Examples/: FindAxisAngle3.ggb  MathDemonstrationAllingCorners.ggb  Test_Axis_Angleformular.ggb
ExampleModels/DefalutLibary/05496/00000/: K1.20260517-223344.FCBak  K1.20260529-005138.FCBak  K1.20260621-205707.FCBak  K1.20260621-215906.FCBak  K1.FCStd  K1.FCStd.c8f3f6f3-347a-42e8-a45d-319cab36c56e  K2.20260529-002331.FCBak  K2.FCStd  K3.20260529-002608.FCBak  K3.FCStd  K4.20260529-121219.FCBak  K4.FCStd  KT.20260607-133218.FCBak  KT.20260607-133220.FCBak  KT.FCStd
ExampleModels/DefalutLibary/05496/00001/: K1.20260613-213015.FCBak  K1.20260621-175353.FCBak  K1.FCStd
ExampleModels/DefalutLibary/09938/00000/: Knot1.20260517-220047.FCBak  Knot1.FCStd
ExampleModels/Sketches/: T-SlotProfiles.20260403-154808.FCBak  T-SlotProfiles.FCStd  TestSketchProfiles.20260403-155021.FCBak  TestSketchProfiles.FCStd
freecad/FramesAndNodes/: example_workbench.py  init_gui.py
freecad/FramesAndNodes/commands/: CommandKnotPlacer.py  CommandNodePlacer.py  CommandProfilePlacer.py  CommandSaveKnot.py  CommandSaveNode.py  CommandsSketchInfo.py  __init__.py  devCommandReloadAll.py  devCommands.py  example_command.py  example_manipulator.py
freecad/FramesAndNodes/features/: KnotLogic.py  NodeLogic.py  OSasDataBase.py  ProfileLogic.py  SaveAndLoad.py  SelectionProcessing.py  SelectionProcessing2.py  Test.py  __init__.py  example_feature_vp.py
freecad/FramesAndNodes/resources/: __init__.py
(+24 files in other folders)
